--- a/sass/utils/_fonts.scss
+++ b/sass/utils/_fonts.scss
@@ -1,4 +1,11 @@
 @font-face {
+  font-family: 'ambidexter_regular';
+  src: url('/fonts/ambidexter_regular.otf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
   font-family: 'Gilroy';
   src: url('/fonts/Gilroy-Regular.eot');
   src: local('Gilroy Regular'), local('Gilroy-Regular'),
