del ttf for gilroy black

--- a/sass/utils/_fonts.scss
+++ b/sass/utils/_fonts.scss
@@ -58,8 +58,7 @@
   src: url('/fonts/Gilroy-Black.eot');
   src: local('Gilroy Black'), local('Gilroy-Black'),
     url('/fonts/Gilroy-Black.eot?#iefix') format('embedded-opentype'),
-    url('/fonts/Gilroy-Black.woff2') format('woff2'), url('/fonts/Gilroy-Black.woff') format('woff'),
-    url('/fonts/Gilroy-Black.ttf') format('truetype');
+    url('/fonts/Gilroy-Black.woff2') format('woff2'), url('/fonts/Gilroy-Black.woff') format('woff');
   font-weight: 900;
   font-style: normal;
 }
