--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   padding-top: 101px;
   padding-bottom: 23px;
-  background-image: url(/images/footer-bg.png);
+  background-image: url(../images/footer-bg.png);
   background-repeat: no-repeat;
   background-size: 130% 100%;
   background-position: 0 100%;
