--- a/sass/layout/_ideas.scss
+++ b/sass/layout/_ideas.scss
@@ -1,7 +1,7 @@
 .ideas {
   max-width: 1920px;
   margin: 0 auto;
-  background-image: url(/images/ideas-bg.png);
+  background-image: url(../images/ideas-bg.png);
   background-position: 40% 23%;
   background-size: 200% 44%;
   background-repeat: no-repeat;
