--- a/sass/layout/_popular.scss
+++ b/sass/layout/_popular.scss
@@ -5,7 +5,7 @@
   padding-bottom: 49px;
   position: relative;
   z-index: 2;
-  background-image: url(/images/popular-bg.png);
+  background-image: url(../images/popular-bg.png);
   background-size: 200% 110%;
   background-repeat: no-repeat;
   background-position: bottom;
@@ -173,7 +173,7 @@
 }
 
 .popular__img-1 {
-  background-image: url(/images/shopers.jpg);
+  background-image: url(../images/shopers.jpg);
   width: 100%;
   height: 210px;
   margin-top: 0;
@@ -199,7 +199,7 @@
 }
 
 .popular__img-2 {
-  background-image: url(/images/cups.jpg);
+  background-image: url(../images/cups.jpg);
   width: 100%;
   height: 144px;
 
@@ -225,7 +225,7 @@
 }
 
 .popular__img-3 {
-  background-image: url(/images/thermos.jpg);
+  background-image: url(../images/thermos.jpg);
   width: 137px;
   height: 141px;
 
@@ -250,7 +250,7 @@
 }
 
 .popular__img-4 {
-  background-image: url(/images/black-t-shirt.jpg);
+  background-image: url(../images/black-t-shirt.jpg);
   width: 137px;
   height: 141px;
 
@@ -358,7 +358,7 @@
   justify-content: center;
 
   &:after {
-    content: "3";
+    content: '3';
     width: 19px;
     height: 19px;
     background-color: white;
@@ -373,7 +373,7 @@
 }
 
 .basket__price {
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   @include font(17px, 500, 1.06);
   color: #000000;
   margin-top: 6px;
