--- a/sass/utils/_fonts.scss
+++ b/sass/utils/_fonts.scss
@@ -1,11 +1,3 @@
-// @font-face {
-//   font-family: 'ambidexter_regular';
-//   src: url('/fonts/ambidexter_regular.otf');
-
-//   font-weight: normal;
-//   font-style: normal;
-// }
-
 @font-face {
   font-family: 'Gilroy';
   src: url('../fonts/Gilroy-Regular.eot');
@@ -60,7 +52,7 @@
   src: local('Gilroy Black'), local('Gilroy-Black'),
     url('../fonts/Gilroy-Black.eot?#iefix') format('embedded-opentype'),
     url('../fonts/Gilroy-Black.woff2') format('woff2'),
-    url('/fonts/Gilroy-Black.woff') format('woff'),
+    url('../fonts/Gilroy-Black.woff') format('woff'),
     url('../fonts/Gilroy-Black.ttf') format('truetype');
   font-weight: 900;
   font-style: normal;
